package edu.fiuba.algo3.modelo.Piso;

import edu.fiuba.algo3.modelo.Area.Area;

public interface Piso {
    void actualizarArea(Area area);
}
